<resources>
    <string name="app_name">POM</string>
    <string name="texto_menu_principal">PRINCIPAL</string>
    <string name="texto_item_list">TESTE</string>
    <string name="texto_num1">1</string>
    <string name="texto_num2">2</string>
    <string name="texto_num3">3</string>
    <string name="texto_num4">4</string>
    <string name="texto_num5">5</string>
    <string name="texto_num6">6</string>
    <string name="texto_num7">7</string>
    <string name="texto_num8">8</string>
    <string name="texto_num9">9</string>
    <string name="texto_padrao_apagar">APAGAR</string>
    <string name="texto_num0">0</string>
    <string name="texto_num00">00</string>
    <string name="texto_virg">,</string>
    <string name="texto_padrao_ok">OK</string>
    <string name="texto_senha">SENHA:</string>
    <string name="texto_padrao_canc">CANC.</string>
    <string name="texto_padrao_cancelar">CANCELAR</string>
    <string name="texto_equip">EQUIPAMENTO:</string>
    <string name="texto_padrao_salvar">SALVAR</string>
    <string name="texto_atualizar_bd">ATUALIZAR DADOS</string>
    <string name="texto_os">NUM. OS:</string>
    <string name="texto_motorista">MATRIC. OPERADOR:</string>
    <string name="texto_titulo_equip">EQUIPAMENTO</string>
    <string name="texto_cod_equip">715</string>
    <string name="texto_descr_equip">COLHEDORA</string>
    <string name="texto_turno">TURNO</string>
    <string name="texto_padrao_retornar">RETORNAR</string>
    <string name="texto_lista_menu_princ">MENU PRINCIPAL</string>
    <string name="texto_motivo_parada">MOTIVOS DE PARADA</string>
    <string name="texto_ret_trabalho">RETORNAR AO TRABALHO</string>
    <string name="texto_horimetro">HORÍMETRO:</string>
    <string name="texto_redimento">RENDIMENTO:</string>
    <string name="texto_atualizar">ATUALIZAR</string>
    <string name="texto_implemento">IMPLEMENTO 1:</string>
    <string name="texto_transbordo">TRANBORDO:</string>
    <string name="texto_conforme">CONFORME (OK)</string>
    <string name="texto_nao_conforme">NÃO CONFORME (ANALISAR)</string>
    <string name="texto_reparo">NÃO CONFORME (REPARO)</string>
    <string name="texto_titulo_checklist">CHECKLIST</string>
    <string name="texto_retornar">RETORNAR</string>
    <string name="texto_atividade">ATIVIDADE</string>
    <string name="texto_carretel">CARRETEL</string>
    <string name="texto_titulo_equip_fert">EQUIPAMENTOS</string>
    <string name="texto_titulo_historico">HISTÓRICO</string>
    <string name="texto_hist_apont">PARADA: VERIFICACAO INICIAL</string>
    <string name="texto_hist_horario">10:08</string>
    <string name="texto_hist_impl_transb">TRANSBORDO: 1001</string>
    <string name="texto_rend_nro_os">NRO OS: 101946</string>
    <string name="texto_rend_valor">REND.: 50.30</string>
    <string name="texto_titulo_rendimento">RENDIMENTO</string>
    <string name="texto_bocal">BOCAL</string>
    <string name="texto_pressao">PRESSÃO</string>
    <string name="texto_velocidade">VELOCIDADE (M)</string>
    <string name="texto_titulo_recolhimento">OS X RECOLHIMENTO</string>
    <string name="texto_rec_mang_nro_os">NRO OS: 101946</string>
    <string name="texto_rec_mang_valor">RECOL. DE MANG.: 100</string>
    <string name="texto_acopla_carretel">ACOPLA CARRETEL</string>
    <string name="texto_padrao_nao">NÃO</string>
    <string name="texto_padrao_sim">SIM</string>
    <string name="texto_atual_checklist">ATENÇÃO! HÁ NOVAS ATUALIZAÇÕES PARA QUESTÕES DE CHECKLIST. DESEJA ATUALIZÁ-LAS?</string>
    <string name="texto_titulo_gestao_vista">GESTÃO À VISTA PLANTIO MECANIZADO</string>
    <string name="texto_subtitulo_prod_frente">PRODUÇÃO FRENTE</string>
    <string name="texto_subtitulo_plan_real">PLANEJADO X REALIZADO</string>
    <string name="texto_subtitulo_media_plant">MEDIA PLANTADORA</string>
    <string name="texto_subtitulo_trator_plant">TRATOR/PLANTADORA</string>
    <string name="texto_subtitulo_caminhao_muda">CAMINHÃO TRANP MUDA</string>
    <string name="texto_subtitulo_colhedora">COLHEDORA</string>
    <string name="texto_subtitulo_trator_tranb">TRATOR TRANSBORDO</string>
    <string name="texto_subtitulo_calib_adub">VARIAÇÃO DA CALIBRAÇÃO</string>
    <string name="texto_subtitulo_calib_inset">VARIAÇÃO CALIBRAÇÃO INSETICIDA/FUNGICIDA</string>
    <string name="texto_subtitulo_gemas">GEMAS VIÁVEIS POR METRO</string>
    <string name="texto_subtitulo_alt_cobr">ALTURA DE COBRIÇÃO</string>
    <string name="texto_subtitulo_prof_sulc">PROFUNDIDADE DA SULCAÇÃO</string>
    <string name="texto_subtitulo_falhas_dep">FALHAS DE DEPOSIÇÃO</string>
    <string name="texto_subtitulo_qual_geral">QUALIDADE GERAL</string>
    <string name="texto_fechar">FECHAR</string>
    <string name="texto_subtitulo_disp_oper">DISP. OPERAÇÃO</string>
    <string name="texto_subtitulo_campo">CAMPO</string>
    <string name="texto_esp_graf">ATUALIZANDO DADOS...</string>
    <string name="texto_pos_pneu">POSIÇÃO PNEU</string>
    <string name="texto_pneu">NUM. DO PNEU:</string>
    <string name="texto_pressao_enc">PRESSÃO ENCONTRADA:</string>
    <string name="texto_pressao_col">PRESSÃO COLOCADA:</string>
    <string name="texto_moto_bomba">MOTO BOMBA:</string>
    <string name="texto_msg_data_hora">POR FAVOR, DIGITE O DIA, MÊS, ANO, HORA E MINUTO ATUAL NAS PRÓXIMAS TELAS.</string>
    <string name="texto_data_hora">DIA:</string>
    <string name="texto_tolete">TOLETE</string>
    <string name="texto_valor_tolete">0,1820</string>
    <string name="texto_lasca">LASCA</string>
    <string name="texto_valor_lasca">0,1820</string>
    <string name="texto_toco">TOCO</string>
    <string name="texto_valor_toco">0,1820</string>
    <string name="texto_ponteiro">PONTEIRO</string>
    <string name="texto_valor_ponteiro">0,1820</string>
    <string name="texto_cana_inteira">CANA INTEIRA</string>
    <string name="texto_valor_cana_inteira">0,1820</string>
    <string name="texto_pedaco">PEDAÇO</string>
    <string name="texto_valor_pedaco">0,1820</string>
    <string name="texto_repique">REPIQUE</string>
    <string name="texto_valor_repique">0,1820</string>
    <string name="texto_soqueira">SOQUEIRA</string>
    <string name="texto_valor_soqueira">0,1820</string>
    <string name="texto_nro_soqueira">NRO SOQUEIRA</string>
    <string name="texto_valor_nro_soqueira">0,1820</string>
    <string name="texto_total">TOTAL</string>
    <string name="texto_valor_total">0,1820</string>
    <string name="texto_titulo_perda">DADOS DE PERDAS\n01/07/2019</string>
    <string name="texto_leira">LEIRA(S)</string>
    <string name="texto_titulo_plantio">DADOS DE PLANTIO\n01/07/2019</string>
    <string name="texto_titulo_descr">QUALIDADE OPERAÇÃO</string>
    <string name="texto_titulo_meta">META</string>
    <string name="texto_titulo_valor">VALOR</string>
    <string name="texto_descr_dm">DISPONIBILIDADE MECÂNICA</string>
    <string name="texto_porc_dm">95%</string>
    <string name="texto_status_dm">BOM</string>
    <string name="texto_descr_ap">ÁREA PLANTADA</string>
    <string name="texto_meta_ap">120</string>
    <string name="texto_valor_ap">100</string>
    <string name="texto_status_ap">RUIM</string>
    <string name="texto_descr_mp">MÉDIA PLANTADA</string>
    <string name="texto_meta_mp">120</string>
    <string name="texto_valor_mp">100</string>
    <string name="texto_status_mp">MÉDIO</string>
    <string name="texto_padrao_anterior">ANTERIOR</string>
    <string name="texto_padrao_proximo">PROXIMO</string>
    <string name="texto_carreta">N. CARRETA:</string>
    <string name="texto_desengate_carreta">DESEJA DESENGATAR AS CARRETAS?</string>
    <string name="texto_frente">NUM. FRENTE:</string>
    <string name="texto_fazenda">COD. SEÇÃO:</string>
    <string name="texto_lista_certificado">CERTIFICADO</string>
    <string name="texto_menu_titulo_motorista">MOTORISTA</string>
    <string name="texto_menu_motorista">1 - FUNCIONARIO FICTICIO</string>
    <string name="texto_menu_titulo_carreta">CARRETA(S): 715 - 720</string>
    <string name="texto_menu_ultima_viagem">NÃO POSSUE CARREGAMENTOS</string>
    <string name="texto_menu_propriedade">60 - ITAQUERE</string>
    <string name="texto_menu_status">STATUS: SAÍDA DA USINA</string>
    <string name="texto_enc_boletim">ENCERRAR O BOLETIM</string>
    <string name="texto_cam">1</string>
    <string name="texto_saida_campo">DESEJA REALMENTE DAR SAÍDA DO CAMPO?</string>
    <string name="texto_lista_motorista_atual">MOTORISTA ATUAL</string>
    <string name="texto_cod_motorista">19759</string>
    <string name="texto_nome_motorista">ANDERSON DA SILVA DELGADO</string>
    <string name="texto_bt_manter_motorista">MANTER</string>
    <string name="texto_bt_trocar_motorista">TROCAR</string>
    <string name="texto_titulo_produto">PRODUTO</string>
    <string name="texto_pega_barra">CAPTURA CODIGO DE BARRA</string>
    <string name="texto_titulo_leira">LEIRA</string>
    <string name="texto_final_boletim">FINALIZAR BOLETIM</string>
    <string name="texto_titulo_cec">RESUMO DA VIAGEM</string>
    <string name="texto_limpar_dados">LIMPAR DADOS</string>
    <string name="texto_msg_titulo_propriedade">FAZENDA</string>
    <string name="texto_msg_descr_propriedade">60 - ITAQUERE</string>
    <string name="texto_padrao_avancar">AVANÇAR</string>
    <string name="texto_titulo_log_proc">LOG - PROCESSO</string>
    <string name="texto_titulo_log_base_dado">LOG - BASE DADO</string>
    <string name="texto_titulo_log_erro">LOG - ERRO</string>
    <string name="texto_log">LOG</string>
    <string name="texto_inicio">INICIANDO O APLICATIVO...</string>
    <string name="texto_titulo_carreg">CARREGAMENTO</string>
    <string name="texto_item_os">ITEM(S) DA OS</string>
    <string name="texto_num_item">NUM. DO ITEM:</string>
    <string name="texto_titulo_opcao">OPÇÃO</string>
    <string name="texto_final_calibragem">FINALIZAR CALIBRAGEM</string>
    <string name="texto_liberacao">NUM. LIBERAÇÃO:</string>
    <string name="texto_funcao">FUNÇÃO</string>
</resources>