<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dp"
    tools:context=".view.MenuPrincPCOMPActivity">

    <TextView
        android:id="@+id/textViewTituloMotorista"
        style="@style/TextViewMenuNegrito"
        android:text="@string/texto_menu_titulo_motorista" />

    <TextView
        android:id="@+id/textViewMotorista"
        style="@style/TextViewMenuNormal"
        android:text="@string/texto_menu_motorista" />

    <TextView
        android:id="@+id/textViewPrincipal"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_atividade" />

    <ListView
        android:id="@+id/motoMecListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <TextView
        android:id="@+id/textViewProcessoNormal"
        style="@style/TextViewItemList"
        android:text="@string/texto_item_list" />

    <Button
        android:id="@+id/buttonParadaMotoMec"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_motivo_parada" />

    <Button
        android:id="@+id/buttonRetMotoMec"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_final_boletim" />

    <Button
        android:id="@+id/buttonLogMotoMec"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_log" />

</LinearLayout>