<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item_checklist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:telaAtual="br.com.usinasantafe.pom.view.ItemCheckListActivity">

    <TextView
        android:id="@+id/textViewTituloChecklist"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_checklist" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TextView
            android:id="@+id/textViewItemChecklist"
            style="@style/TextViewTituloLista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/texto_cod_equip" />

    </ScrollView>

    <Button
        android:id="@+id/buttonConforme"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_conforme" />

    <Button
        android:id="@+id/buttonNaoConforme"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_nao_conforme" />

    <Button
        android:id="@+id/buttonReparo"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_reparo" />

    <Button
        android:id="@+id/buttonCancChecklist"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_retornar" />

</LinearLayout>
