<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewProcId"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_apont" />

    <TextView
        android:id="@+id/textViewProcDthr"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_horario" />

    <TextView
        android:id="@+id/textViewProcTela"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_impl_transb" />

    <TextView
        android:id="@+id/textViewProcDescr"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_impl_transb" />

</LinearLayout>