<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewHistOS"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_apont"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewHistItem"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_apont"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewHistStatus"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_horario" />

    <TextView
        android:id="@+id/textViewHistHorarioInicial"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_horario" />

    <TextView
        android:id="@+id/textViewHistHorarioFinal"
        style="@style/TextViewItemList"
        android:text="@string/texto_hist_impl_transb" />

</LinearLayout>
