<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.MsgPropriedadeActivity">

    <TextView
        android:id="@+id/textViewMsgTituloPropriedade"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_msg_titulo_propriedade" />

    <TextView
        android:id="@+id/textViewMsgDescrPropriedade"
        style="@style/TextViewMsgDescr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/texto_msg_descr_propriedade" />

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonMsgPropriedadeCanc"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_canc" />

        <Button
            android:id="@+id/buttonMsgPropriedadeOk"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_ok" />

    </LinearLayout>

</LinearLayout>