<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.VerifOperadorActivity">

    <TextView
        android:id="@+id/textViewVerMotorista"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_lista_motorista_atual" />

    <LinearLayout
        android:id="@+id/rightRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >

        <TextView
            android:id="@+id/textViewCodMotorista"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_cod_motorista"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/item_lista"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/textViewNomeMotorista"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_nome_motorista"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/item_lista"
            android:textColor="#000000"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonAlterarMotorista"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_bt_trocar_motorista" />

        <Button
            android:id="@+id/buttonManterMotorista"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_bt_manter_motorista" />

    </LinearLayout>

</LinearLayout>