<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ProdutoActivity">

    <TextView
        android:id="@+id/textViewPrincipal"
        style="@style/TextViewTituloLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_titulo_produto"
        />

    <TextView
        android:id="@+id/txResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PRODUTO:"
        android:textSize="@dimen/item_lista"
        android:textColor="#000000"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        />

    <Button
        android:id="@+id/btnCapturaBarra"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text="@string/texto_pega_barra" />

    <LinearLayout
        android:id="@+id/rightRelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCancProd"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_canc" />

        <Button
            android:id="@+id/buttonOkProd"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_padrao_salvar" />

    </LinearLayout>

</LinearLayout>